<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <CheckBox android:id="@+id/cbComplete" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        />

    <TextView android:id="@+id/tvTask" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" android:layout_marginLeft="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" tools:text="test"
        />

</LinearLayout>
